--- a/ssh.client.library.tests/ssh.client.library.tests.csproj
+++ b/ssh.client.library.tests/ssh.client.library.tests.csproj
@@ -45,8 +45,11 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Samples\client-key.bkp">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="Samples\large-file.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ssh.client.library\ssh.client.library.csproj">
@@ -56,6 +59,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="SshClientLibraryTests.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Samples\small-file.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
