Refatored some code and added exception handling tests

--- a/ssh.client.library.tests/ssh.client.library.tests.csproj
+++ b/ssh.client.library.tests/ssh.client.library.tests.csproj
@@ -47,6 +47,9 @@
     <None Include="Samples\client-key.bkp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <Content Include="Samples\empty-file.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Samples\large-file.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
