--- a/ssh.client.library/ssh.client.library.csproj
+++ b/ssh.client.library/ssh.client.library.csproj
@@ -45,7 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="proxy.cs" />
+    <Compile Include="Proxy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
